--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test:unit": "vitest",
+    "test": "vitest",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@testing-library/jest-dom": "^6.5.0",
     "pinia": "^2.1.7",
     "uuid": "^10.0.0",
     "vue": "^3.4.29",
