--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "vitest",
+    "test:unit": "vitest run components/__tests__/unit",
+    "test:e2e": "vitest run components/__tests__/e2e",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
     "format": "prettier --write src/"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^6.5.0",
+    "chart.js": "^4.4.4",
     "pinia": "^2.1.7",
+    "primevue": "^4.0.7",
     "uuid": "^10.0.0",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
@@ -23,10 +26,13 @@
     "@vitejs/plugin-vue": "^5.0.5",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/test-utils": "^2.4.6",
+    "dotenv": "^16.4.5",
     "eslint": "^8.57.0",
+    "eslint-plugin-vitest": "^0.5.4",
     "eslint-plugin-vue": "^9.23.0",
     "jsdom": "^24.1.0",
     "prettier": "^3.2.5",
+    "puppeteer": "^23.5.0",
     "vite": "^5.3.1",
     "vitest": "^1.6.0"
   }
